[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum ={ version = "0.7.4" }
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
engine = { path = "../engine" }

axum-extra = { version = "0.9", features = ["typed-header"] }
futures = "0.3"
headers = "0.4"

tokio-stream = "0.1"
async-channel = "2"
async-stream = "0.3"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
clap = { version = "4.4", features = ["derive"] }
minijinja = { version = "1.0.15", features = ["builtins"] }
